--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ button {
     align-items: center;
     margin-top: 1dvh;
     margin: .5em;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     height: 6dvh;
 
 }
@@ -378,6 +378,7 @@ address {
 .blogimages {
     border-radius: 0;
     width: 50%;
+    margin: 1em;
 }
 .musicimage {
     transition: transform 2s;
@@ -410,7 +411,7 @@ address {
 .acknowledgement {
     font-size: medium;
     width: 80%;
-    margin-top: 2%;;
+    margin: 6%;;
 }
 .aboutmepara {
     margin: 2em;
@@ -424,6 +425,9 @@ address {
 @media screen and (max-width: 600px) {
     nav > a {
         font-size: small;
+    }
+    .blogimages {
+        width: 75%;
     }
 }
     
@@ -486,5 +490,8 @@ address {
     }
     .blogimages {
         max-width: 25%;
+    }
+    .acknowledgement {
+        margin: 2%;
     }
 }
