--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ main {
     position: relative;
     /* height: 85dvh; */
     background-color: white;
+    background-image: "images/Macbook_graphsUI.png";
     min-height: 85vh;
     /* background-color: #111; */
 }
