--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
     position: relative;
     /* height: 85dvh; */
     background-image: "images/Macbook_graphsUI.png";
-    background-color: white;
+    /* background-color: white; */
     
     min-height: 85vh;
     /* background-color: #111; */
