reverted back to no image

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ main {
     /* height: 85dvh; */
     
     background-color: white;
-    background-image: url("images/Macbook_graphsUI.png");
+    /* background-image: url("images/Macbook_graphsUI.png"); */
+    /* height: 10dvh; */
     min-height: 85vh;
     /* background-color: #111; */
 }
